--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -584,6 +584,12 @@
             line-height: 24px;
             text-transform: lowercase;
             margin-bottom: 8px; 
+            overflow: hidden;
+            text-overflow: ellipsis;
+            -webkit-line-clamp: 2;
+            max-height: 5em;
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
         }
     }
 }
