--- a/assets/scss/_detail-news.scss
+++ b/assets/scss/_detail-news.scss
@@ -2,8 +2,11 @@
     .entry-title{
         color: $primary;
         font-weight: 600;
-        line-height: 27px;
+        line-height: 33px;
         margin-bottom: 33px;
+        @include minWidth(768px){
+            line-height: 27px;
+        }
     }
 }
 .table-of-content{
@@ -15,15 +18,20 @@
             border-bottom: 1px solid #DBDBDB;
         }
         a{
-            padding: 0 21px;
+            padding: 12px 21px;
             color: $primary;
             text-align: justify;
             display: flex;
             align-items: center;
-            font-size: 20px;
+            font-size: 18px;
             font-weight: 600;
-            line-height: 65px;
+            line-height: 28px;
             transition: all 0.3s;
+            @include minWidth(768px){
+                font-size: 20px;
+                line-height: 65px;
+                padding: 0 21px;
+            }
             &:hover{
                 background: #FBFBFB; 
             }
@@ -67,6 +75,10 @@
             align-items: center;
             margin: 0 8px;
             transition: all 0.3s;
+            margin-bottom: 15px;
+            @include minWidth(768px){
+                margin-bottom: 0px;
+            }
             svg{
                 margin-right: 14px;
             }
@@ -74,5 +86,204 @@
                 opacity: 0.6;
             }
         } 
+    }
+}
+.box-menu-content-news{
+    border-radius: 10px;
+    border: 2px solid #8DC540;
+    background: #FFF;
+    transition: all 0.5 ease-in-out;
+    &.active{
+        h4{
+            border-bottom: 0px solid #E6E6E6;
+        }
+        ul{
+            height: 0;
+            display: none;
+        }
+    }
+    h4{
+        cursor: pointer;
+        padding: 16px 27px;
+        border-bottom: 1px solid #E6E6E6;
+        color: #27835A;
+        text-align: justify;
+        font-size: 20px;
+        font-weight: 600;
+        line-height: 30px;
+        position: relative;
+        .icon{
+            margin-right: 20px;
+        }
+        .icon-arrow{
+            position: absolute;
+            right: 16px;
+        }
+    }
+    ul{
+        padding-top: 20px;
+        padding-bottom: 30px;
+        transition: all 0.5 ease-in-out;
+        li{
+            list-style-type: auto;
+            list-style-position: inside;
+            padding-left: 40px;
+            padding-right: 30px;
+            color: #27835A;
+            position: relative;
+            font-size: 18px;
+            &:not(:last-child){
+                padding-bottom: 20px;
+            }
+            a{
+                display: inline;
+                position: relative;
+                color: #27835A;
+                font-weight: 500;
+                line-height: 30px;
+                &::before{
+                    content: "";
+                    background-image: url(/assets/images/ic-down.svg);
+                    background-repeat: no-repeat;
+                    width: 9px;
+                    height: 12px;
+                    position: absolute;
+                    background-size: contain;
+                    left: -37px;
+                    top: 7px;
+                }
+            }
+        }
+    }
+}
+.sidebar-news{
+    .line{
+        height: 2px;
+        &::after{
+            height: 2px;
+        }
+    }
+}
+.box-spotlight-sidebar{
+    margin-top: 38px;
+    .item-blog-new{
+        margin-top: 20px;
+        .box-text{
+            border-radius: 0px 0px 20px 20px;
+            background: linear-gradient(68deg, #0D6C42 32.88%, #8DC540 128.26%);
+            box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.10);
+        }
+        .image-cover-h{
+            padding-top: 71%;
+        }
+        h3{
+            a{
+                cursor: pointer;
+                &:hover{
+                    color: $light;
+                    opacity: 0.5;
+                }
+            }
+        }
+        a{
+            color: $light;
+        }
+        .post-meta{
+            color: $light;
+        }
+        p{
+            color: $light;
+        }
+        .btn-border-rounded{
+            margin-top: 18px;
+            background-color: transparent;
+            color: #8DC540;
+        }
+    }
+}
+.box-news-best{
+    margin-top: 42px;
+}
+.list-blog-news-best{
+    margin-top: 20px;
+    .item-blog-list{
+        box-shadow: none;
+        padding-bottom: 21px;
+        margin-bottom: 21px;
+        border-radius: 0;
+        &:not(:last-child){
+            border-bottom:1px solid #EAEAEA;
+        }
+        .box-image{
+            border-radius: 20px;
+            width: 133px;
+        }
+        .box-text{
+            padding: 24px 24px 12px 15px;
+            h3{
+                a{
+                    text-overflow: ellipsis;
+                    -webkit-line-clamp: 2;
+                    max-height: 3.1em;
+                    display: -webkit-box;
+                    font-size: 17px; 
+                    -webkit-box-orient: vertical;
+                    overflow: hidden;
+                }
+            }
+        }
+    }
+}
+.list-another-news{
+    display: -ms-grid;
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    -webkit-column-gap: 10px;
+    column-gap: 10px;
+    margin-bottom: 22px;
+    @include minWidth(768px){
+        column-gap: 30px;
+        grid-template-columns: repeat(4, minmax(0, 1fr));
+    }
+    .item-blog-new{
+        margin-bottom: 10px;
+        @include minWidth(768px){
+            margin-bottom: 0;
+        }
+    }
+    .image-cover-h{
+        padding-top: 81%;
+    }
+    .box-image{
+        border-radius: 20px 20px 0px 0px;
+    }
+    .box-text{
+        padding: 15px 22px;
+        @include minWidth(768px){
+            padding: 22px 27px;
+        }
+        h3{
+            cursor: pointer;
+            font-size: 17px;
+            text-overflow: ellipsis;
+            -webkit-line-clamp: 2;
+            max-height: 3em;
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+        }
+    }
+}
+.another-news{
+    margin-bottom: 80px;
+    .list-another-news{
+        margin-top: 25px;
+    }
+    .line{
+        height: 2px;
+        &::after{
+            width: 12%;
+            height: 2px;
+        }
     }
 }
