--- a/assets/scss/_detail-news.scss
+++ b/assets/scss/_detail-news.scss
@@ -6,6 +6,7 @@
         margin-bottom: 33px;
         @include minWidth(768px){
             line-height: 27px;
+            font-size: 28px; 
         }
     }
 }
