--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -167,13 +167,23 @@
 }
 .list-item-product-t{
     display: grid;
-    grid-template-columns: repeat(3, minmax(0, 1fr));
+    grid-template-columns: repeat(2, minmax(0, 1fr));
     column-gap:10px;
+    @include minWidth(480px){
+        grid-template-columns: repeat(3, minmax(0, 1fr));
+        column-gap:30px;
+    }
     @include minWidth(1400px){
         grid-template-columns: repeat(5, minmax(0, 1fr));
         column-gap:30px;
     }
     .item-best-seller{
+        &:nth-child(n+3){
+            display: none;
+            @include minWidth(480px){
+                display: block;
+            }
+        }
         &:nth-child(n+4){
             display: none;
             @include minWidth(768px){
@@ -402,10 +412,16 @@
                 padding-right: 60px;
             }
             &::after{
-                content: url("/assets/images/line-2.png");
+                content: url("/assets/images/line-2-sp.png");
                 position: absolute;
                 right: 0;
-                bottom: 0;
+                top: 0;
+                bottom: auto;
+                @include minWidth(768px){
+                    content: url("/assets/images/line-2.png");
+                    top: auto;
+                    bottom: 0;
+                }
             }
         }
         .feature{
@@ -421,19 +437,22 @@
                 padding-left: 60px;
             }
             .title{
-                margin-bottom: 14px;
                 flex-direction: column;
+               
                 @include minWidth(768px){
                     flex-direction: row;
+                    margin-bottom: 14px;
                 }
                 h5{
-                    margin-left: 14px;
+                    margin-top: 15px;
                     color: #0D6C42;
                     font-size: 20px;
                     font-weight: 600;
                     line-height: 29px;
                     @include minWidth(768px){
                         font-size: 24px;
+                        margin-left: 14px;
+                        margin-top: 0;
                     }
                 }
             }
@@ -442,10 +461,11 @@
                 text-align: center;
                 font-size: 15px;
                 font-weight: 400;
-                line-height: 29px;
+                line-height: 25px;
                 @include minWidth(768px){
                     font-size: 17px;
                     text-align: justify;
+                    line-height: 29px;
                 }
             }
         }
@@ -546,6 +566,12 @@
             @include minWidth(1024px){
                 width: 31.5%;
             }
+            // .item-blog-list{
+            //     display: block;
+            //     @include minWidth(480px){
+            //         display: flex;
+            //     }
+            // }
         }
     }
     .slider-blog-news{
